--- a/frontend/src/components/Cell.css
+++ b/frontend/src/components/Cell.css
@@ -1,6 +1,9 @@
 .cell {
     width: 100px;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bg-white {
@@ -9,4 +12,9 @@
 
 .bg-black {
     background-color: rgb(159, 181, 201);
+}
+
+.chess-figure {
+    width: 70%;
+    height: 70%;
 }
