--- a/frontend/src/components/Cell.css
+++ b/frontend/src/components/Cell.css
@@ -1,6 +1,6 @@
 .cell {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,4 +17,8 @@
 .chess-figure {
     width: 70%;
     height: 70%;
+}
+
+.active-cell {
+    background-color: bisque;
 }
