--- a/frontend/src/components/Cell.css
+++ b/frontend/src/components/Cell.css
@@ -1,6 +1,6 @@
 .cell {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,4 +21,8 @@
 
 .active-cell {
     background-color: bisque;
+}
+
+.debug {
+    font-size: 8px;
 }
